fixed background spacing issue on navigation items

--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #353535 50%);
-  background-size: 220%;
+  background-size: 230%;
   transition: all .4s;
   letter-spacing: 1px; }
   .navigation__link:link span, .navigation__link:visited span {
