--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -78,7 +78,8 @@
                                 transparent 0%,
                                 transparent 50%,
                                 #353535 50%);
-            background-size: 220%;
+            // background-size: 220%;
+            background-size: 230%;
             transition: all .4s;
             letter-spacing: 1px;
 
